# codebase-analyzer-llm

./: .gitignore  Makefile  README.md  SECURITY.md  analysis.json  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVALUATION.md  SCALING.md
docs/adr/: 0001-map-reduce-over-rag.md  0002-langchain-structured-output.md  0003-deterministic-metrics-vs-llm.md  0004-provider-agnostic-endpoint.md  README.md
examples/: output.schema.json  sample_analysis.json
scripts/: clone_target.sh
src/code_analyzer/: __init__.py  aggregator.py  cache.py  cli.py  complexity.py  config.py  extractors.py  ingestion.py  llm.py  logging_setup.py  mock.py  models.py  pipeline.py  prompts.py  redaction.py  tokens.py
tests/: test_cli.py  test_complexity.py  test_ingestion.py  test_models_and_cache.py  test_pipeline_dryrun.py  test_redaction.py  test_tokens.py
